src/_assets/scss/_post.scss
.single {
    img {
        display: block;
        margin: 1rem 0;
    }
}

.post {
    display: flex;
    flex-direction: column;

    & > h1 {
        order: -2;
    }
    & > .page__meta {
        order: -1;
    }
    & > * {
        order: 0;
    }
}

.post__content > * {
    position: relative;
}

.page__updated-at {
    margin: 1rem 0;
    font-size: 14px;
    opacity: 0.5;

    &:hover {
        opacity: 1;
    }

    
    .page--recently-updated &:before {
        content: '🌱';

    }
}

.tip {
    margin: 2rem -1rem;
    padding: 1rem;
    border: 1px solid limegreen;

    &:before {
        content: 'tip';
        text-transform: uppercase;
        letter-spacing: 1px;
        display: block;
        font-weight: bold;
        font-size: 0.8em;
        color: limegreen;
        margin-bottom: 0.5rem;
    }
}

.download {
    padding: 1rem;
    margin: 2rem -1rem;
    border: 2px solid var(--c-primary);


    a {
        text-decoration: none;
    }

    ul {
        padding-left: 1.25rem;
    }

    & > *:last-child {
        margin-bottom: 0;
    }

    &:before {
        content: 'download';
        text-transform: uppercase;
        letter-spacing: 1px;
        font-weight: bold;
        font-size: 0.75em;
        color: var(--c-primary);
        margin-bottom: 1rem;
        display: block;
    }
}

.tag {
    font-size: 0.75em;
    margin-right: 0.5rem;
    font-weight: 600;
    text-decoration: none;
}

.table-of-contents {
    padding: 1rem;
    margin: 2rem -1rem;
    font-weight: 600;
    background-color: rgba(navy, 0.03);

    &:before {
        content: 'Table Of Contents';
        color: var(--c-primary);
        text-transform: uppercase;
        letter-spacing: 1px;
        font-weight: bold;
        margin-bottom: 1rem;
        display: block;
    }

    ul {
        list-style: none;
        margin: 0;
    }

    ul ul {
        list-style: inside;
    }

    a {
        text-decoration: none;
    }
}

.footnote-backref {
    font-family: $fontMono;
    text-decoration: none;
}

[id*=fnref] {
    text-decoration: none;
}

.anchor {
    opacity: 0.25;
    
    width: 0;
    display: inline-block;
    margin-left: 0.5rem;
    
    &::after {
        font-weight: normal;
        content: ' ⚓\FE0E';
    }

    :is(h2,h3,h4,h5,h6):hover &,  
    :is(h2,h3,h4,h5,h6):focus-within & {
        opacity: 1;
        color: var(--c-primary);
    }
}

.post > div {
    .recommend {
        &:before {
            content: 'Recommended';
            font-weight: 400;
            opacity: 0.5;
            margin-bottom: 1rem;
        }
        
        margin: 1rem 0;
        font-weight: 600;
        border-left: 3px solid var(--c-primary);
        padding-left: 1rem;

        @media (min-width: 1300px) {   
            margin: 0 0 0 1rem;
            top: 0;
            left: 100%;
            position: absolute;
            width: 50%;
        }
    }
}

